# databricks-workspace-bundles-demo

./: .env.example  .gitignore  README.md  REFERENCE.md  dagster_cloud.yaml  pyproject.toml  reset-and-start.sh  run-demo.sh
.dg/: telemetry.yaml
databricks_bundles/: README.md  common_regional_etl.yml  databricks_etl.yml  databricks_eu_etl.yml  databricks_eu_regional.yml  databricks_us_etl.yml  databricks_us_regional.yml
databricks_bundles/resources/: etl_jobs.yml  eu_regional_jobs.yml  us_regional_jobs.yml
dbt_projects/: README.md
dbt_projects/common_analytics_dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt_projects/common_analytics_dbt/models/: sources.yml
dbt_projects/common_analytics_dbt/models/gold/: customer_cohorts.sql
dbt_projects/common_analytics_dbt/models/silver/: customer_metrics.sql
dbt_projects/eu_analytics_dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt_projects/eu_analytics_dbt/models/: sources.yml
dbt_projects/eu_analytics_dbt/models/gold/: customer_cohorts.sql
dbt_projects/eu_analytics_dbt/models/silver/: customer_metrics.sql
dbt_projects/us_analytics_dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt_projects/us_analytics_dbt/models/: sources.yml
src/databricks_workspace_bundles_demo/: definitions.py  orchestration.py
src/databricks_workspace_bundles_demo/components/: __init__.py  databricks_asset_bundle_component.py  databricks_dbt_component.py  databricks_workspace_component.py
src/databricks_workspace_bundles_demo/defs/: external_systems.py  jobs.py  schedules.py
(+13 files in other folders)
