[project]
name = "databricks_workspace_bundles_demo"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.12",
    "dagster-databricks>=0.28.12",
    "databricks-sdk>=0.60.0",
    "dagster-dbt>=0.25.0",
    "dbt-core>=1.8.0",
    "dbt-databricks>=1.8.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "databricks_workspace_bundles_demo"
registry_modules = [
    "databricks_workspace_bundles_demo.components.*",
]


